token authentication added

--- a/UserTestApi/appsettings.json
+++ b/UserTestApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=usertests;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Issuer": "AuthServer",
+    "Audience": "WebClient",
+    "Key": "1234567890!@#$%^&*()"
   }
 }
